<resources>
    <string name="app_name">Learning Intents</string>
    <string name="enter_name">Enter Name</string>
    <string name="details"><![CDATA[Details >>]]></string>
    <string name="web_browser">WEB BROWSER</string>
    <string name="sms">SMS</string>
    <string name="copy_to_clipboard">COPY TO CLIPBOARD</string>
    <string name="back_to_main">BACK TO MAIN</string>
    <string name="load_url">LOAD URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_message">Enter Message</string>
</resources>