<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/compass" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/detailsButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


    <Button
        android:id="@+id/webButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/web_browser"
        app:layout_constraintStart_toStartOf="@+id/copyButton"
        app:layout_constraintTop_toBottomOf="@id/detailsButton" />

    <Button
        android:id="@+id/smsButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        app:layout_constraintStart_toStartOf="@+id/detailsButton"
        app:layout_constraintTop_toBottomOf="@id/webButton"/>

    <Button
        android:id="@+id/copyButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/copy_to_clipboard"
        app:layout_constraintStart_toStartOf="@+id/smsButton"
        app:layout_constraintTop_toBottomOf="@id/smsButton" />



</androidx.constraintlayout.widget.ConstraintLayout>